# Hi_Equals_hi_Lab

./: CMakeLists.txt  main.cpp
src/: strcmp.cpp  strcmp.hpp
tests/: strcmp_test.cpp
